--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     name: Whats-up-trading
     env: python
     plan: free
-    buildCommand: ""
-    startCommand: gunicorn main:app
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: PORT
         value: 10000
