--- a/.render.yaml
+++ b/.render.yaml
@@ -5,3 +5,6 @@ services:
     plan: free
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn bot:app"
+    envVars:
+      - key: TELEGRAM_BOT_TOKEN
+        value: "8101329393:AAGZgiQfG0xwI-k3pc4QG__5VDFcIom5Zyg"
